k8s/deploy/dev-common/mongo-statefulset.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  replicas: 3
  template:
    metadata:
      labels:
        role: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--logpath"
            - "/data/db/mongod.log"
            - "--wiredTigerCacheSizeGB"
            - '0.5'
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: datadir
              mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
