k8s/deploy/dev-common/linkerd-namerd.yml
# runs linkerd in a daemonset, in linker-to-linker mode, using namerd to route
# requests, and handling edge traffic on a separate linkerd router
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: linkerd
  name: linkerd
spec:
  template:
    metadata:
      labels:
        app: linkerd
    spec:
      volumes:
      - name: linkerd-config
        configMap:
          name: "linkerd-config"
      containers:
      - name: linkerd
        image: buoyantio/linkerd:1.1.0
        args:
        - /io.buoyant/linkerd/config/config.yaml
        ports:
        - name: outgoing
          containerPort: 4140
          hostPort: 4140
        - name: incoming
          containerPort: 4141
        - name: external
          containerPort: 4142
        - name: admin
          containerPort: 9990
        volumeMounts:
        - name: "linkerd-config"
          mountPath: "/io.buoyant/linkerd/config"
          readOnly: true

      - name: kubectl
        image: buoyantio/kubectl:v1.4.0
        args:
        - "proxy"
        - "-p"
        - "8001"
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd
spec:
  selector:
    app: linkerd
  type: LoadBalancer
  ports:
  - name: external
    port: 80
    targetPort: 4142
  - name: outgoing
    port: 4140
  - name: incoming
    port: 4141
    targetPort: 4141
    nodePort: 32200
  - name: admin
    port: 9990
