k8s/deploy/dev-common/mongo-external.yml
# Headless service for the StatefulSet members
apiVersion: v1
kind: Service
metadata:
  name: mongo-external
  labels:
    role: mongo
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
    nodePort: 31117
  selector:
    role: mongo
  type: NodePort
