k8s/deploy/dev-common/namerd.yml
---
apiVersion: v1
kind: Service
metadata:
  name: namerd
spec:
  selector:
    app: namerd
  type: LoadBalancer
  ports:
  - name: thrift
    port: 4100
  - name: http
    port: 4180
  - name: admin
    port: 9990
