k8s/deploy/dev-common/ingress-linkerd.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd
spec:
  backend:
    serviceName: linkerd
    servicePort: 9990
